# musicode

./: Cargo.toml  LICENSE
src/: chord.rs  consts.rs  errors.rs  interval_set.rs  iter.rs  lib.rs  macros.rs  pattern.rs  pitch.rs  scale.rs
tests/: interval_set.rs  iter.rs  lib.rs  pattern.rs  scale.rs
