[package]
name = "musicode"
description = "A music theory library"
license = "MIT"
version = "0.1.0"
readme = "README.md"
repository = "https://github.com/marksauter/musicode"
authors = ["Mark Sauter dr.funk.mark@gmail.com"]
edition = "2018"
exclude = [".gitignore"]
keywords = ["music", "music-theory"]

[dependencies]

[dependencies.serde]
version = "1.0.125"
features = ["derive"]
